# CompressSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.cpp
abandoned/: 1  a.cpp
archives/: Configure.txt  ZipFileList.txt
include/: CmdInterface.h  File.h  FileAccessor.h  MyTime.h  Time.h  ZipAccessor.h  ZipFileList.h
src/: CmdInterface.cc  FileAccessor.cc  ZipAccessor.cc  ZipFileList.cc  test
test/: CmdInterfaceTest.cpp  basicTest.cpp
testfile/: abaabaaba.txt  这就是奎桑提.md
testfile/tmp/: abaabaaba.txt
